solution for AoC 2022 'Day 3: Rucksack Reorganization' - part 2